Font Color Change to White

--- a/style/main.css
+++ b/style/main.css
@@ -4,7 +4,7 @@ html, body {
   margin: 0;
   padding: 0;
   background: #F78181;
-  color: #354b59;
+  color: #FFFFFF;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-family: "Whitney SSm A","Whitney SSm B","Helvetica Neue",Helvetica,Arial,sans-serif;
   font-size: 18px; }
